--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "ai": "^6.0.73",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.3.1",
     "lucide-react": "^0.468.0",
     "next": "^16.0.0",
+    "next-intl": "^4.8.3",
     "openai": "^6.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
